<resources>
    <string name="app_name">Fluttr</string>

    <string name="title_activity_presenter">PresenterActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_settings">Settings</string>
    <string name="find_me_a_trip_to">Find me a trip to</string>
    <string name="from">" from"</string>
    <string name="for_space">"for "</string>
    <string name="people">" people."</string>
    <string name="suggestions">Suggestions:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to">" to" </string>
    <string name="clear">Clear</string>
    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="packages">Packages</string>

    <!-- ads -->
    <string name="ads_app_id">ca-app-pub-5476002465270320~5242797299</string>
    <string name="hotel_banner_ad">ca-app-pub-5476002465270320/8196263699</string>
    <string name="hotel_interstitial_ad">ca-app-pub-5476002465270320/6300728098</string>
    <string name="fluttr">FLUTTR</string>
    <string name="quick_search">Quick Search</string>
    <string name="fluttr_through_your_perfect_booking">Fluttr through your perfect booking.</string>
    <string name="get_started">Get Started</string>
</resources>
