<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_below="@+id/header_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:text="@string/find_me_a_trip_to"
        style="@style/searchHeaderText" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/destination"
            android:inputType="textAutoComplete"
            tools:text="PARIS"
            style="@style/searchHeaderInputText" />

        <TextView
            android:visibility="invisible"
            android:id="@+id/travel_date_text"
            style="@style/searchHeaderText"
            android:text="@string/from" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/travel_date_depart"
            android:visibility="invisible"
            style="@style/searchHeaderInputText"
            tools:text="14 DEC 2016" />

        <TextView
            android:id="@+id/travel_date_text_return"
            style="@style/searchHeaderText"
            android:layout_weight="0.1"
            android:visibility="invisible"
            android:text="@string/to"/>

    </LinearLayout>

    <EditText
        android:id="@+id/travel_date_return"
        android:visibility="invisible"
        style="@style/searchHeaderInputText"
        tools:text="20 DEC 2016" />

    <LinearLayout
        android:id="@+id/num_travelers_parent"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/searchHeaderText"
            android:text="@string/for_space" />

        <EditText
            android:id="@+id/num_travelers"
            android:inputType="number"
            style="@style/searchHeaderInputText"
            tools:text="2" />

        <TextView
            style="@style/searchHeaderText"
            android:text="@string/people" />

    </LinearLayout>

</LinearLayout>