<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@drawable/gradient_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mttnow.fluttr.MainActivity">

    <Button
        android:id="@+id/search_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorPrimaryDark"
        android:text="@string/get_started" />

    <Button
        android:id="@+id/quick_nav"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/search_btn"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/spicyOrange"
        android:text="@string/quick_search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="45dp"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/textAppearanceLargeInverse"
            android:textSize="32sp"
            android:text="@string/fluttr"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/textAppearanceMediumInverse"
            android:text="@string/fluttr_through_your_perfect_booking"
            android:gravity="center" />

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_fluttr"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>

</RelativeLayout>
